# QBoolReporter

./: CMakeLists.txt  README.md  main.cpp  resource.qrc
base/: my_bold_db.sqlite
controllers/: adddonorform.h  personcontroller.cpp  personcontroller.h  qbooldcontroller.cpp  qbooldcontroller.h  qdatacontroller.cc  qdatacontroller.h  qdocumentcontrol.cpp  qdocumentcontrol.h
models/: personmodel.cpp  personmodel.h  qbooldgroup.cpp  qbooldgroup.h  qdatabold.cc  qdatabold.h  qdatavoew.h  qdocumentmodel.cpp  qdocumentmodel.h
views/: adddonorform.cc  adddonorform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdatavoew.cc  qdatavoew.ui  signinform.cc  signinform.h  signinform.ui
